@@ -256,7 +256,7 @@ Obey `tramp-kubernetes-context'"
 
 ;;;###tramp-autoload
 (defun tramp-kubernetes--context-namespace (vec)
-  "The kubectl options for context and namespace."
+  "The kubectl options for context and namespace as string."
   (mapconcat
    #'identity
    `(,(when-let ((context (tramp-kubernetes--current-context vec)))
@@ -404,7 +404,7 @@ see its function help for a description of the format."
 
  ;; Default connection-local variables for Tramp.
 
- (defconst tramp-container-connection-local-default-kubernetes-variables
+ (defconst tramp-kubernetes-connection-local-default-variables
    '((tramp-config-check . tramp-kubernetes--current-context-data)
      ;; This variable will be eval'ed in `tramp-expand-args'.
      (tramp-extra-expand-args
@@ -414,24 +414,24 @@ see its function help for a description of the format."
    "Default connection-local variables for remote kubernetes connections.")
 
  (connection-local-set-profile-variables
-  'tramp-container-connection-local-default-kubernetes-profile
-  tramp-container-connection-local-default-kubernetes-variables)
+  'tramp-kubernetes-connection-local-default-profile
+  tramp-kubernetes-connection-local-default-variables)
 
  (connection-local-set-profiles
   `(:application tramp :protocol ,tramp-kubernetes-method)
-  'tramp-container-connection-local-default-kubernetes-profile)
+  'tramp-kubernetes-connection-local-default-profile)
 
- (defconst tramp-container-connection-local-default-flatpak-variables
+ (defconst tramp-flatpak-connection-local-default-variables
    `((tramp-remote-path  . ,(cons "/app/bin" tramp-remote-path)))
    "Default connection-local variables for remote flatpak connections.")
 
  (connection-local-set-profile-variables
-  'tramp-container-connection-local-default-flatpak-profile
-  tramp-container-connection-local-default-flatpak-variables)
+  'tramp-flatpak-connection-local-default-profile
+  tramp-flatpak-connection-local-default-variables)
 
  (connection-local-set-profiles
   `(:application tramp :protocol ,tramp-flatpak-method)
-  'tramp-container-connection-local-default-flatpak-profile))
+  'tramp-flatpak-connection-local-default-profile))
 
 (add-hook 'tramp-unload-hook
 	  (lambda ()
